--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,16 @@
 
 body {
     margin: 0px;
-    font-family: "Heebo", sans-serif;
     padding-top: 80px;
-    
-   
+    font-family: "Heebo", sans-serif;
+        
 }
 
 .container {
     max-width: 1180px;
-    font-family: auto;
     padding: 0 16px;
 }
-
+    
 ul {
     margin: 0;
     padding: 0;
@@ -66,6 +64,10 @@ header nav ul li a {
     letter-spacing: 0.37px;
     margin-right: 24px;
     text-decoration: none;
+}
+
+header nav ul li a:hover {
+    color: #3e50e5;
 }
 
 header nav ul li:last-of-type a {
@@ -133,7 +135,13 @@ section.hero img {
     text-align: center;
     border: none;
     text-transform: uppercase;
+    cursor: pointer;
+}
 
+.hero-content button:hover {
+    color: #3e50e5;
+    background-color: #FFF;
+    border: 1px solid #3e50e5;
 }
 
 section.best-sellers {
@@ -164,6 +172,7 @@ section.best-sellers .container {
     display: flex;
     justify-content: space-around;
     padding: 0 8px; 
+    margin: auto;
 
 }
 
@@ -178,6 +187,7 @@ section.best-sellers .product-slider .product {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
+   cursor: pointer;
 }
 
 section.best-sellers .product-slider .product img {
@@ -261,6 +271,12 @@ section.best-sellers .product-slider .product .product-info button {
     line-height: 24px;
 }
 
+section.best-sellers .product-slider .product:hover .product-info button {
+    border: 1px solid #3e50e5;
+    background-color: #3e50e5;
+    color: white;
+}
+
 section.newsletter {
     background-color: rgba(200, 200, 200, 0.18);
     max-width: 955px;
@@ -320,6 +336,13 @@ section.newsletter button {
     letter-spacing: 0.35px;
     line-height: 21px;
     text-transform: uppercase;  
+    cursor: pointer;
+}
+
+section.newsletter button:hover {
+    color: #3E50E5;
+    background-color: #FFFFFF;
+    border: 1px solid #3E50E5;
 }
 
 footer .bottom-nav {
@@ -331,6 +354,7 @@ footer .bottom-nav .container {
     max-width: 955px;
     display: flex;
     justify-content: space-between;
+    margin: auto;
 }
 
 footer .bottom-nav ul {
@@ -357,6 +381,10 @@ footer .bottom-nav ul li.list-title {
     margin-top: 0;
     margin-bottom: 20px;
     color: #FFF;
+}
+
+footer .bottom-nav ul li a:hover {
+    color: #3E50E5;
 }
 
 footer .copyright-text {
